--- a/dev/public/last-order.html
+++ b/dev/public/last-order.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Заказы (2)</title>
+    <title>История заказа | подробнее</title>
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Брусника">
@@ -549,7 +549,7 @@
                     </div>
                     <div class="col-md-3 mb-4 mb-lg-0">
                       <p><b>Дата доставки</b></p>
-                      <p>—</p>
+                      <p>07.03.2022</p>
                     </div>
                     <div class="col-md-3">
                       <p><b>Доставка</b></p>
@@ -558,7 +558,7 @@
                   </div>
                   <div class="d-none d-lg-block">
                     <div class="row justify-content-between align-items-center mb-5">
-                      <div class="col-auto"><a class="link link--black_border" href="#">Отследить заказ</a></div>
+                      <div class="col-auto"></div>
                       <div class="col-md-3"><a class="btn btn--medium btn--black" href="#">ПОВТОРИТЬ ЗАКАЗ</a></div>
                     </div>
                   </div>
@@ -570,7 +570,7 @@
                   </div>
                   <hr>
                   <div class="order-item-title h2 mb-3">Параметры оплаты</div>
-                  <div class="mb-4"><b>Счёт № 21112 от 03.02.2021</b><span class="badge red">Не оплачено</span></div>
+                  <div class="mb-4"><b>Счёт № 21112 от 03.02.2021</b></div>
                   <div class="order-item-info row mb-2">
                     <div class="col-md-3 mb-4 mb-lg-0">
                       <p><b>Сумма к оплате по счёту</b></p>
@@ -580,7 +580,7 @@
                       <p><b>Способ оплаты</b></p>
                       <p>Картой или наличными при получении</p>
                     </div>
-                  </div><a class="link link--black_border" href="#">Сменить способ оплаты</a>
+                  </div>
                   <hr>
                   <div class="order-item-title h2 mb-3">Параметры отгрузки</div>
                   <div class="mb-4"><b>Отгрузка № 21112 от 03.02.2021, самовывоз</b></div>
@@ -659,7 +659,7 @@
                       </div>
                     </div>
                     <div class="row justify-content-between d-none d-lg-flex">
-                      <div class="col-auto"> <a class="link link--black_border" href="order-cancel.html">Отменить заказ</a></div>
+                      <div class="col-auto"> </div>
                       <div class="col-md-4">
                         <div class="row mb-2">
                           <div class="col-md-8 right">Общий вес: </div>
@@ -679,9 +679,9 @@
                         </div>
                       </div>
                     </div>
-                    <div class="d-lg-none">
+                    <div class="border-top-gray d-lg-none">
                       <p>Общий вес: 4, 28 кг</p>
-                      <p>Стоимость доставки: 0 Р</p>
+                      <p class="pt-4">Стоимость доставки: 0 Р</p>
                       <p>Сумма заказа: 11 380 Р</p>
                       <p><b>Всего: 11 380 Р</b></p>
                     </div>
