--- a/dev/public/loyalty-card.html
+++ b/dev/public/loyalty-card.html
@@ -509,7 +509,7 @@
           <div class="page-heading">
             <div class="row">
               <div class="col-md-4"> 
-                <div class="mb-4 d-lg-none"><a class="link link--gray_border" href="dashboard.html">Личный кабинет</a></div>
+                <div class="d-lg-none"><a class="link link--gray_border" href="dashboard.html">1Личный кабинет</a></div>
                 <div class="page-heading-title page-heading-title_personal uppercase">Карта лояльности</div>
               </div>
               <div class="col-md-8"></div>
@@ -542,21 +542,21 @@
                   <div class="row loyalty-blocks">
                     <div class="col-lg-4 mb-lg-4">
                       <div class="loyalty-block"><span>
-                          <div class="h3">Скидка - 5%</div>
+                          <div class="loyalty-block-title">Скидка - 5%</div>
                           <div>При покупке от 30 000 руб.</div></span></div>
                     </div>
                     <div class="col-lg-4 mb-lg-4">
                       <div class="loyalty-block"><span>
-                          <div class="h3">Скидка - 7%</div>
+                          <div class="loyalty-block-title">Скидка - 7%</div>
                           <div>При покупке от 100 000 руб.</div></span></div>
                     </div>
                     <div class="col-lg-4 mb-lg-4">
                       <div class="loyalty-block"><span>
-                          <div class="h3">Скидка - 10%</div>
+                          <div class="loyalty-block-title">Скидка - 10%</div>
                           <div>При покупке от 200 000 руб.</div></span></div>
                     </div>
                     <div class="row justify-content-between align-items-center">
-                      <div class="col-auto"><a class="link link--black_border" href="#">Подробнее о программе лояльности</a></div>
+                      <div class="col-auto col-auto--loyalty-link"><a class="link link--black_border loyalty-link" href="loyalty-card-empty.html">Подробнее о программе лояльности</a></div>
                     </div>
                   </div>
                 </div>
