--- a/dev/public/order-cancel.html
+++ b/dev/public/order-cancel.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Текущие заказы</title>
+    <title>Отменить заказ</title>
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Брусника">
@@ -504,16 +504,16 @@
           </div>
         </div>
       </header>
-      <main class="page-content">
+      <main class="page-content page-content--personal-area">
         <div class="page-inner page-inner--w2">
           <div class="page-heading">
             <div class="row">
               <div class="col-md-4"> 
-                <div class="mb-4 d-lg-none"><a class="link link--gray_border" href="dashboard.html">Личный кабинет</a></div>
+                <div class="d-lg-none"><a class="link link--gray_border" href="dashboard.html">Личный кабинет</a></div>
                 <div class="page-heading-title page-heading-title_personal uppercase">Заказы (2)</div>
               </div>
               <div class="col-md-8">
-                <div class="page-heading-title1 border-top-gray only-desktop">&nbsp;</div>
+                <div class="page-heading-title1 border-bottom-gray only-desktop">&nbsp;</div>
               </div>
             </div>
           </div>
@@ -535,7 +535,7 @@
               </div>
             </div>
             <div class="col-lg-1"></div>
-            <div class="col-12 col-md-8 offset-md-2 col-lg-9 offset-lg-0 col-xl-8">
+            <div class="col-12 col-md-8 offset-md-2 col-lg-8 offset-lg-0 col-xl-8">
               <div class="order-items">
                 <div class="order-item noborder">
                   <div class="mb-5 d-none d-lg-block"><a class="link link--black_border" href="orders.html">Вернуться в текущие заказы</a></div>
@@ -549,7 +549,7 @@
                       </div>
                       <div class="form-row">
                         <div class="row-btns">
-                          <button class="btn btn--black btn--medium" type="submit">Отменить заказ</button><span class="m-4"><a class="link link--black_border" href="orders.html">Вернуться в текущие заказы</a></span>
+                          <button class="btn btn--black btn--medium" type="submit">Отменить заказ</button><span><a class="link link--black_border" href="orders.html">Вернуться в текущие заказы</a></span>
                         </div>
                       </div>
                     </form>
