--- a/dev/public/history.html
+++ b/dev/public/history.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Заказы (2)</title>
+    <title>История заказов</title>
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Брусника">
@@ -510,7 +510,7 @@
             <div class="row">
               <div class="col-md-4"> 
                 <div class="mb-4 d-lg-none"><a class="link link--gray_border" href="dashboard.html">Личный кабинет</a></div>
-                <div class="page-heading-title page-heading-title_personal uppercase">Заказы (2)</div>
+                <div class="page-heading-title page-heading-title_personal uppercase d-none d-lg-block">Заказы (2)</div>
               </div>
               <div class="col-md-8"></div>
             </div>
@@ -533,7 +533,7 @@
               </div>
             </div>
             <div class="col-lg-1"></div>
-            <div class="col-12 col-md-8 offset-md-2 col-lg-9 offset-lg-0 col-xl-8" style="border-top: 1px solid #E1E1E1;">
+            <div class="col-12 col-md-8 offset-md-2 col-lg-8 offset-lg-0 col-xl-8 border-md-top-gray"> 
               <div class="history position-lg-top-100px">
                 <div class="tabs">
                   <div class="tabs-heading">
