--- a/dev/public/orders.html
+++ b/dev/public/orders.html
@@ -533,7 +533,7 @@
               </div>
             </div>
             <div class="col-lg-1"></div>
-            <div class="col-12 col-md-8 offset-md-2 col-lg-9 offset-lg-0 col-xl-8">
+            <div class="col-12 col-md-8 offset-md-2 col-lg-8 offset-lg-0 col-xl-8">
               <div class="order-items order-items__personal position-lg-top-100px">
                 <div class="order-item noborder">
                   <div class="order-item-title">Заказ № 21112 от 03.02.2021</div>
@@ -643,7 +643,7 @@
                     </div>
                     <div class="d-none d-lg-block">
                       <div class="row mt-3 justify-content-between">
-                        <div class="col-auto"><a class="link link--black_border" href="order-cancel.html">Отменить заказ</a></div>
+                        <div class="col-auto"></div>
                         <div class="col-md-4">
                           <div class="row">
                             <div class="col-md-8 right"><b>Всего: </b></div>
@@ -654,7 +654,7 @@
                     </div>
                     <div class="d-lg-none mobile-table-summary">
                       <div class="center">
-                        <div class="mb-4"><b><span class="mr-20">Всего:</span>19 000 РУБ.</b></div><a class="link link--black_border" href="order-cancel.html">Отменить заказ</a>
+                        <div class="mb-4"><b><span class="mr-20">Всего:</span>19 000 РУБ.</b></div>
                       </div>
                     </div>
                   </div>
@@ -769,7 +769,7 @@
                     </div>
                     <div class="d-none d-lg-block">
                       <div class="row mt-3 justify-content-between">
-                        <div class="col-auto"><a class="link link--black_border" href="order-cancel.html">Отменить заказ</a></div>
+                        <div class="col-auto"></div>
                         <div class="col-md-4">
                           <div class="row">
                             <div class="col-md-8 right"><b>Всего: </b></div>
@@ -780,7 +780,7 @@
                     </div>
                     <div class="d-lg-none mobile-table-summary">
                       <div class="center">
-                        <div class="mb-4"><b><span class="mr-20">Всего:</span>19 000 РУБ.</b></div><a class="link link--black_border" href="order-cancel.html">Отменить заказ</a>
+                        <div class="mb-4"><b><span class="mr-20">Всего:</span>19 000 РУБ.</b></div>
                       </div>
                     </div>
                   </div>
