fix loyalty-card loyalty-card-empty

--- a/dev/public/loyalty-card.html
+++ b/dev/public/loyalty-card.html
@@ -509,7 +509,7 @@
           <div class="page-heading">
             <div class="row">
               <div class="col-md-4"> 
-                <div class="d-lg-none"><a class="link link--gray_border" href="dashboard.html">1Личный кабинет</a></div>
+                <div class="d-lg-none"><a class="link link--gray_border" href="dashboard.html">Личный кабинет</a></div>
                 <div class="page-heading-title page-heading-title_personal uppercase">Карта лояльности</div>
               </div>
               <div class="col-md-8"></div>
@@ -533,7 +533,7 @@
               </div>
             </div>
             <div class="col-lg-1"></div>
-            <div class="col-12 col-md-8 offset-md-2 col-lg-9 offset-lg-0 col-xl-8">
+            <div class="col-12 col-md-8 offset-md-2 col-lg-8 offset-lg-0 col-xl-8">
               <div class="order-items">
                 <div class="order-item">
                   <div class="order-item-title mt-0">Номер вашей карты 2016614<br>5 % — скидка по карте</div>
