--- a/dev/public/sms-cod.html
+++ b/dev/public/sms-cod.html
@@ -293,7 +293,7 @@
               <div class="message d-none"> 
                 <div class="message__title">КОРЗИНА ПУСТА</div>
                 <div class="message__text">Добавьте товары в корзину, <br>или <a class="link link--black_border" href="login.html">авторизуйтесь</a>,<br>чтобы увидеть выбранные товары.</div>
-                <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="#">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
+                <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="brand.html">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
               </div>
             </div>
             <div class="basket-mobile-menu__footer">
@@ -505,7 +505,7 @@
         </div>
       </header>
       <main>
-        <div class="page-popup page-popup_login" id="auth-form">
+        <div class="page-popup" id="auth-form">
           <div class="page-popup-title">ВХОД</div>
           <form class="form">
             <div class="tab-content-item auth-tab show form-tab-content-item" id="auth-form_phone">
