--- a/dev/public/successful-bid.html
+++ b/dev/public/successful-bid.html
@@ -293,7 +293,7 @@
               <div class="message d-none"> 
                 <div class="message__title">КОРЗИНА ПУСТА</div>
                 <div class="message__text">Добавьте товары в корзину, <br>или <a class="link link--black_border" href="login.html">авторизуйтесь</a>,<br>чтобы увидеть выбранные товары.</div>
-                <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="#">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
+                <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="brand.html">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
               </div>
             </div>
             <div class="basket-mobile-menu__footer">
@@ -511,7 +511,7 @@
               <div class="message__title">ЗАЯВКА УСПЕШНО ОТПРАВЛЕНА</div>
               <div class="message__text">В течение часа с вами свяжется менеджер для подтверждения деталей. </div>
               <div class="message__text">Если у вас возникли вопросы, свяжитесь <br>с нами по номеру <a href="tel:+78632273135">+7 (863) 227-31-35</a></div>
-              <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="#">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
+              <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="brand.html">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
             </div>
           </div>
           <div class="page-inner--w1 page-inner hidden-x">
