--- a/dev/public/basket-empty.html
+++ b/dev/public/basket-empty.html
@@ -293,7 +293,7 @@
               <div class="message d-none"> 
                 <div class="message__title">КОРЗИНА ПУСТА</div>
                 <div class="message__text">Добавьте товары в корзину, <br>или <a class="link link--black_border" href="login.html">авторизуйтесь</a>,<br>чтобы увидеть выбранные товары.</div>
-                <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="#">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
+                <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="brand.html">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
               </div>
             </div>
             <div class="basket-mobile-menu__footer">
@@ -510,7 +510,7 @@
             <div class="message d-none"> 
               <div class="message__title">КОРЗИНА ПУСТА</div>
               <div class="message__text">Добавьте товары в корзину, <br>или <a class="link link--black_border" href="login.html">авторизуйтесь</a>,<br>чтобы увидеть выбранные товары.</div>
-              <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="#">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
+              <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="brand.html">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
             </div>
           </div>
           <div class="page-inner--w1 page-inner hidden-x">
