--- a/dev/public/dashboard.html
+++ b/dev/public/dashboard.html
@@ -293,7 +293,7 @@
               <div class="message d-none"> 
                 <div class="message__title">КОРЗИНА ПУСТА</div>
                 <div class="message__text">Добавьте товары в корзину, <br>или <a class="link link--black_border" href="login.html">авторизуйтесь</a>,<br>чтобы увидеть выбранные товары.</div>
-                <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="#">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
+                <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="brand.html">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
               </div>
             </div>
             <div class="basket-mobile-menu__footer">
@@ -520,7 +520,7 @@
                 <div class="col-lg-4 mb-lg-4"><a class="personal-block" href="favorites.html"><span class="dashboard-title">Избранное (2)</span></a></div>
                 <div class="col-lg-4 mb-lg-4"><a class="personal-block" href="personal.html"><span class="dashboard-title">Личные данные</span></a></div>
                 <div class="col-lg-4 mb-lg-4"><a class="personal-block" href="loyalty-card.html"><span class="dashboard-title">Карта лояльности</span></a></div>
-                <div class="col-lg-3 mb-lg-4 d-lg-none"><a class="personal-block" href="#"><span class="h3">Выйти </span></a></div>
+                <div class="col-lg-3 mb-lg-4 d-lg-none"><a class="personal-block" href="#"><span class="dashboard-enter">Выйти </span></a></div>
               </div>
             </div>
           </div>
