add to basket - выезжает снизу для xs

--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -1358,8 +1358,7 @@
                   <li><a href="#">XL</a></li>
                 </ul>
           </div>
-        </div>
-        <button class="btn btn--black btn--medium btn--fullwidth basket-open" type="submit">Выберите размеры   </button>
+        </div><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">Выберите размеры  </a>
       </div>
     </div>
     <div class="page-popup mfp-hide" id="mail-popup">
