--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -1624,7 +1624,7 @@
                   <div class="mobile-filter-item-heading-title">Размер</div>
                   <div class="mobile-filter-item-heading-toggler"></div>
                 </div>
-                <div class="mobile-filter-item-content"><a class="link link--black_border size-open" href="#">Как подобрать размер</a>
+                <div class="mobile-filter-item-content"><a class="link link--black_border" href="#catalog-size-popup" data-popup="{&quot;type&quot;:&quot;inline&quot;}">Как подобрать размер</a>
                   <div class="filter-row filter-row__size">
                     <label class="form-checkbox">
                       <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">One size</span>
@@ -1884,6 +1884,205 @@
         </div>
       </form>
     </div>
+    <div class="page-popup mfp-hide" id="catalog-size-popup"> 
+      <div class="page-popup-heading">
+        <div class="page-popup-heading-title center h1">Таблица размеров</div>
+      </div>
+      <div class="basket-menu-sections" style="overflow: auto;"> 
+        <div class="size-menu__title">Таблица размеров</div>
+        <div class="basket-mobile-menu__body simplebar">
+          <div>
+            <div class="size-menu__text">
+              Этот справочник по размерам носит ориентировочный характер.
+              Если у вас уже есть похожая модель нашего бренда, размер
+              которой вам подходит, рекомендуем выбрать тот же размер.
+            </div>
+            <div class="size-table" id="#tabNav">
+              <div class="size-items tabs-heading">
+                <label class="active" data-tab="#size-tabs_one" data-tabs=".size-tab">
+                  <div class="size-item-content">
+                    <div class="size-item-title">XS</div>
+                  </div>
+                </label>
+                <label data-tab="#size-tabs_two" data-tabs=".size-tab">
+                  <div class="size-item-content">
+                    <div class="size-item-title">S</div>
+                  </div>
+                </label>
+                <label data-tab="#size-tabs_three" data-tabs=".size-tab">
+                  <div class="size-item-content">
+                    <div class="size-item-title">M</div>
+                  </div>
+                </label>
+                <label data-tab="#size-tabs_four" data-tabs=".size-tab">
+                  <div class="size-item-content">
+                    <div class="size-item-title">L</div>
+                  </div>
+                </label>
+                <label data-tab="#size-tabs_five" data-tabs=".size-tab">
+                  <div class="size-item-content">
+                    <div class="size-item-title">XL</div>
+                  </div>
+                </label>
+                <label data-tab="#size-tabs_six" data-tabs=".size-tab">
+                  <div class="size-item-content">
+                    <div class="size-item-title">Рост&nbsp;H1</div>
+                  </div>
+                </label>
+                <label data-tab="#size-tabs_seven" data-tabs=".size-tab">
+                  <div class="size-item-content">
+                    <div class="size-item-title">Рост&nbsp;H2</div>
+                  </div>
+                </label>
+              </div>
+              <div class="tabs-content">
+                <div class="tab-content-item size-tab active" id="size-tabs_one">
+                  <div class="table-size">
+                    <div class="table-size__row">
+                      <div>Российский размер</div>
+                      <div>40 – 42</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват груди, см</div>
+                      <div>80 – 86</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват талии, см</div>
+                      <div>58 – 84</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват бёдер, см</div>
+                      <div>86 – 92</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-content-item size-tab" id="size-tabs_two">
+                  <div class="table-size"> 
+                    <div class="table-size__row">
+                      <div>Российский размер</div>
+                      <div>42 – 44</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват груди, см</div>
+                      <div>80 – 86</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват талии, см</div>
+                      <div>58 – 84</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват бёдер, см</div>
+                      <div>86 – 92</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-content-item size-tab" id="size-tabs_three">
+                  <div class="table-size"> 
+                    <div class="table-size__row">
+                      <div>Российский размер</div>
+                      <div>44 – 46</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват груди, см</div>
+                      <div>80 – 86</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват талии, см</div>
+                      <div>58 – 84</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват бёдер, см</div>
+                      <div>86 – 92</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-content-item size-tab" id="size-tabs_four">
+                  <div class="table-size"> 
+                    <div class="table-size__row">
+                      <div>Российский размер</div>
+                      <div>46 – 48</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват груди, см</div>
+                      <div>80 – 86</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват талии, см</div>
+                      <div>58 – 84</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват бёдер, см</div>
+                      <div>86 – 92</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-content-item size-tab" id="size-tabs_five">
+                  <div class="table-size"> 
+                    <div class="table-size__row">
+                      <div>Российский размер</div>
+                      <div>48 – 50</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват груди, см</div>
+                      <div>80 – 86</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват талии, см</div>
+                      <div>58 – 84</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват бёдер, см</div>
+                      <div>86 – 92</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-content-item size-tab" id="size-tabs_six">
+                  <div class="table-size"> 
+                    <div class="table-size__row">
+                      <div>Российский размер</div>
+                      <div>50 – 52</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват груди, см</div>
+                      <div>80 – 86</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват талии, см</div>
+                      <div>58 – 84</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват бёдер, см</div>
+                      <div>86 – 92</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-content-item size-tab" id="size-tabs_seven">
+                  <div class="table-size"> 
+                    <div class="table-size__row">
+                      <div>Российский размер</div>
+                      <div>52 – 54</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват груди, см</div>
+                      <div>80 – 86</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват талии, см</div>
+                      <div>58 – 84</div>
+                    </div>
+                    <div class="table-size__row">
+                      <div>Обхват бёдер, см</div>
+                      <div>86 – 92</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="size-menu__title size-menu__title_left">Как снять мерки для себя</div><img class="size-menu__img" src="../dummy/SizeGuide.jpg" alt="Как снять мерки для себя">
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="page-popup page-popup--checked mfp-hide" id="checkout-popup">
       <div class="page-popup-heading">
         <div class="page-popup-title uppercase">ВЫБРАТЬ ПУНКТ ВЫДАЧИ</div>
@@ -2003,7 +2202,7 @@
       <div class="page-popup-heading">
         <div class="page-popup-heading-title center h1">Выберите размер</div>
       </div>
-      <div class="check-list">
+      <div class="check-dimensions-list check-list" style="justify-content: center;">
             <ul class="size-list size-list_vertical">
               <li><a href="#">XS</a></li>
               <li><a href="#">S</a></li>
@@ -2012,9 +2211,7 @@
               <li><a href="#">XL</a></li>
             </ul>
       </div>
-      <div class="page-popup-footer">
-        <button class="btn btn--black btn--medium btn--fullwidth basket-open" type="submit">ВЫБРАТЬ</button>
-      </div>
+      <div class="page-popup-footer"><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">Выберите размеры</a></div>
     </div>
   </body>
 </html>
