--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -1398,7 +1398,8 @@
             <form class="mobile-filter">
               <div class="mobile-filter-close"></div>
               <div class="mobile-filter-heading">
-                <div class="mobile-filter-heading-title">Фильтры(3)</div><a class="basket__title-link-clean-basket mobile-filter-heading-reset" href="#" onclick="window.location.reload();return false;">Очистить фильтр</a>
+                <div class="mobile-filter-heading-title">Фильтры(3)</div>
+                <div class="basket__title-link-clean-basket mobile-filter-heading-reset">Очистить фильтр</div>
               </div>
               <div class="mobile-filter-items">
                 <div class="mobile-filter-item">
@@ -2088,6 +2089,21 @@
         </div>
       </div>
     </div>
+    <div class="page-popup mfp-hide" id="change-size-popup"> 
+      <div class="page-popup-heading">
+        <div class="page-popup-heading-title center h1">Выберите размер</div>
+      </div>
+      <div class="check-dimensions-list check-list" style="justify-content: center;">
+            <ul class="size-list size-list_vertical">
+              <li><a href="#">XS</a></li>
+              <li><a href="#">S</a></li>
+              <li><a href="#">M</a></li>
+              <li><a href="#">L</a></li>
+              <li><a href="#">XL</a></li>
+            </ul>
+      </div>
+      <div class="page-popup-footer"><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">Выберите размеры</a></div>
+    </div>
     <div class="page-popup page-popup--checked mfp-hide" id="checkout-popup">
       <div class="page-popup-heading">
         <div class="page-popup-title uppercase">ВЫБРАТЬ ПУНКТ ВЫДАЧИ</div>
@@ -2202,21 +2218,6 @@
         <li><a class="product-list-link" href="#"><span class="product-list-link__img"><img class="product-list-img product-list-img-1" src="../dummy/slider/c1-small.png" alt="красный цвет" data-imgsrcnew="../dummy/slider/c1-small.png"><span>Коричневый </span></span><span>&gt;</span></a></li>
         <li class="product-list-item"><a class="product-list-link" href="#"><span class="product-list-link__img"><img class="product-list-img product-list-img-2" src="../dummy/slider/c2-small.png" alt="зеленый цвет" data-imgsrcnew="../dummy/slider/c2-small.png"><span>Бежевый  </span></span><span>&gt; </span></a></li>
       </ul>
-    </div>
-    <div class="page-popup mfp-hide" id="change-size-popup"> 
-      <div class="page-popup-heading">
-        <div class="page-popup-heading-title center h1">Выберите размер</div>
-      </div>
-      <div class="check-dimensions-list check-list" style="justify-content: center;">
-            <ul class="size-list size-list_vertical">
-              <li><a href="#">XS</a></li>
-              <li><a href="#">S</a></li>
-              <li><a href="#">M</a></li>
-              <li><a href="#">L</a></li>
-              <li><a href="#">XL</a></li>
-            </ul>
-      </div>
-      <div class="page-popup-footer"><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">Выберите размеры</a></div>
     </div>
   </body>
 </html>
