fix: filter popup (paddings - left)

--- a/dev/public/brand.html
+++ b/dev/public/brand.html
@@ -1378,16 +1378,19 @@
       <form>
         <div class="basket-inner page-inner--w2">
           <div class="mobile-filter-close"></div>
-          <div class="basket-menu-sections">
+          <div class="basket-menu-sections" style="padding:0;">
             <div class="mobile-filter-scroll-holder">
               <div class="mobile-filter-scroll-inner">
                 <div class="mobile-filter">
-                  <div class="mobile-filter-heading">
-                    <div class="mobile-filter-heading-title">Фильтры(13)</div>
-                    <div class="basket__title-link-clean-basket mobile-filter-heading-reset">Очистить фильтр</div>
+                  <div class="mobile-filter-heading p-0" style1="padding:0;">
+                    <div class="mobile-filter-heading-title">Фильтры(3)</div>
+                    <div class="basket__title-link-clean-basket mobile-filter-heading-reset">
+                      Очистить
+                      фильтр
+                    </div>
                   </div>
-                  <div class="mobile-filter-items">
-                    <div class="mobile-filter-item">
+                  <div class="mobile-filter-items" style="height: calc(100vh - 200px); overflow-y: auto; overflow-x: hidden;">
+                    <div class="mobile-filter-item" style="margin:0;">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Сортировать (Цена по убыванию)</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -1415,7 +1418,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="mobile-filter-item">
+                    <div class="mobile-filter-item m-0" style1="margin:0;">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Цвет(2)</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -1545,7 +1548,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="mobile-filter-item">
+                    <div class="mobile-filter-item m-0" style1="margin:0;">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Материалы</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -1606,13 +1609,13 @@
                       </div>
                       <div class="mobile-filter-item-content"></div>
                     </div>
-                    <div class="mobile-filter-item">
+                    <div class="mobile-filter-item m-0" style1="margin:0;">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Размер</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
                       </div>
                       <div class="mobile-filter-item-content"><a class="link link--black_border" href="#catalog-size-popup" data-popup="{&quot;type&quot;:&quot;inline&quot;}">Как подобрать размер</a>
-                        <div class="filter-row filter-row__size">
+                        <div class="wrapper-form-checkbox">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">One size</span>
                           </label>
@@ -1622,8 +1625,6 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">Рост H1</span>
                           </label>
-                        </div>
-                        <div class="filter-row filter-row__size">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XS(RU36-38)</span>
                           </label>
@@ -1633,8 +1634,6 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XS(RU36-38)</span>
                           </label>
-                        </div>
-                        <div class="filter-row filter-row__size">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">S(RU40-42)</span>
                           </label>
@@ -1644,8 +1643,6 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">S(RU40-42)</span>
                           </label>
-                        </div>
-                        <div class="filter-row filter-row__size">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">M(RU44-46)</span>
                           </label>
@@ -1655,8 +1652,6 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">M(RU44-46)</span>
                           </label>
-                        </div>
-                        <div class="filter-row filter-row__size">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">L(RU48-50)</span>
                           </label>
@@ -1666,8 +1661,6 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">L(RU48-50)</span>
                           </label>
-                        </div>
-                        <div class="filter-row filter-row__size">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XL(RU52-54)</span>
                           </label>
@@ -1677,8 +1670,6 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XL(RU52-54)</span>
                           </label>
-                        </div>
-                        <div class="filter-row filter-row__size">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XL(RU56-58)</span>
                           </label>
@@ -1691,7 +1682,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="mobile-filter-item open">
+                    <div class="mobile-filter-item open m-0" style1="margin:0;">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Цена</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -1713,12 +1704,12 @@
                       </div>
                     </div>
                   </div>
+                  <div class="mobile-filter-btns">
+                    <button class="btn btn--black btn--medium">ПОКАЗАТЬ РЕЗУЛЬТАТЫ (688)</button>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="basket-mobile-menu__footer mobile-filter-btns">
-            <button class="btn btn--black btn--medium w100 max-w100" type="submit">ПОКАЗАТЬ РЕЗУЛЬТАТЫ (688)</button>
           </div>
         </div>
       </form>
