--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -1395,18 +1395,15 @@
       <form>
         <div class="basket-inner page-inner--w2">
           <div class="mobile-filter-close"></div>
-          <div class="basket-menu-sections" style="padding:0;">
+          <div class="basket-menu-sections p-0">
             <div class="mobile-filter-scroll-holder">
               <div class="mobile-filter-scroll-inner">
                 <div class="mobile-filter">
-                  <div class="mobile-filter-heading p-0" style1="padding:0;">
+                  <div class="mobile-filter-heading p-0">
                     <div class="mobile-filter-heading-title">Фильтры(3)</div>
-                    <div class="basket__title-link-clean-basket mobile-filter-heading-reset">
-                      Очистить
-                      фильтр
-                    </div>
+                    <div class="basket__title-link-clean-basket mobile-filter-heading-reset">Очистить фильтр</div>
                   </div>
-                  <div class="mobile-filter-items" style="height: calc(100vh - 200px); overflow-y: auto; overflow-x: hidden;">
+                  <div class="mobile-filter-items" style="height: calc(100vh - 185px); overflow-y: auto; overflow-x: hidden;">
                     <div class="mobile-filter-item" style="margin:0;">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Сортировать (Цена по убыванию)</div>
@@ -1435,7 +1432,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="mobile-filter-item m-0" style1="margin:0;">
+                    <div class="mobile-filter-item m-0">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Цвет(2)</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -1565,7 +1562,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="mobile-filter-item m-0" style1="margin:0;">
+                    <div class="mobile-filter-item m-0">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Материалы</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -1626,7 +1623,7 @@
                       </div>
                       <div class="mobile-filter-item-content"></div>
                     </div>
-                    <div class="mobile-filter-item m-0" style1="margin:0;">
+                    <div class="mobile-filter-item m-0">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Размер</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -1699,7 +1696,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="mobile-filter-item open m-0" style1="margin:0;">
+                    <div class="mobile-filter-item open m-0">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Цена</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -1710,10 +1707,12 @@
                             <div class="filter-price-field-item">
                               <label class="filter-price-field-item-title">от</label>
                               <input class="form-item form-item--text filter-price-field filter-price-field--from" type="text" value="1000">
+                              <div class="ml-10px">РУБ.</div>
                             </div>
                             <div class="filter-price-field-item">
                               <label class="filter-price-field-item-title">до</label>
                               <input class="form-item form-item--text filter-price-field filter-price-field--to" type="text" value="1000000">
+                              <div class="ml-10px">РУБ.</div>
                             </div>
                           </div>
                           <input class="form-item form-item--range" type="range" data-value="1000,1000000" value="1000, 1000000" min="1000" max="1000000" step="1" multiple>
