--- a/dev/public/dashboard.html
+++ b/dev/public/dashboard.html
@@ -820,16 +820,16 @@
       <form>
         <div class="basket-inner page-inner--w2">
           <div class="mobile-filter-close"></div>
-          <div class="basket-menu-sections">
+          <div class="basket-menu-sections p-0">
             <div class="mobile-filter-scroll-holder">
               <div class="mobile-filter-scroll-inner">
                 <div class="mobile-filter">
-                  <div class="mobile-filter-heading">
-                    <div class="mobile-filter-heading-title">Фильтры(13)</div>
+                  <div class="mobile-filter-heading p-0">
+                    <div class="mobile-filter-heading-title">Фильтры(3)</div>
                     <div class="basket__title-link-clean-basket mobile-filter-heading-reset">Очистить фильтр</div>
                   </div>
-                  <div class="mobile-filter-items">
-                    <div class="mobile-filter-item">
+                  <div class="mobile-filter-items" style="height: calc(100vh - 185px); overflow-y: auto; overflow-x: hidden;">
+                    <div class="mobile-filter-item" style="margin:0;">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Сортировать (Цена по убыванию)</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -857,7 +857,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="mobile-filter-item">
+                    <div class="mobile-filter-item m-0">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Цвет(2)</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -987,7 +987,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="mobile-filter-item">
+                    <div class="mobile-filter-item m-0">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Материалы</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -1048,13 +1048,13 @@
                       </div>
                       <div class="mobile-filter-item-content"></div>
                     </div>
-                    <div class="mobile-filter-item">
+                    <div class="mobile-filter-item m-0">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Размер</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
                       </div>
                       <div class="mobile-filter-item-content"><a class="link link--black_border" href="#catalog-size-popup" data-popup="{&quot;type&quot;:&quot;inline&quot;}">Как подобрать размер</a>
-                        <div class="filter-row filter-row__size">
+                        <div class="wrapper-form-checkbox">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">One size</span>
                           </label>
@@ -1064,8 +1064,6 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">Рост H1</span>
                           </label>
-                        </div>
-                        <div class="filter-row filter-row__size">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XS(RU36-38)</span>
                           </label>
@@ -1075,8 +1073,6 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XS(RU36-38)</span>
                           </label>
-                        </div>
-                        <div class="filter-row filter-row__size">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">S(RU40-42)</span>
                           </label>
@@ -1086,8 +1082,6 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">S(RU40-42)</span>
                           </label>
-                        </div>
-                        <div class="filter-row filter-row__size">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">M(RU44-46)</span>
                           </label>
@@ -1097,8 +1091,6 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">M(RU44-46)</span>
                           </label>
-                        </div>
-                        <div class="filter-row filter-row__size">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">L(RU48-50)</span>
                           </label>
@@ -1108,8 +1100,6 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">L(RU48-50)</span>
                           </label>
-                        </div>
-                        <div class="filter-row filter-row__size">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XL(RU52-54)</span>
                           </label>
@@ -1119,8 +1109,6 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XL(RU52-54)</span>
                           </label>
-                        </div>
-                        <div class="filter-row filter-row__size">
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XL(RU56-58)</span>
                           </label>
@@ -1133,7 +1121,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="mobile-filter-item open">
+                    <div class="mobile-filter-item open m-0">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Цена</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -1144,10 +1132,12 @@
                             <div class="filter-price-field-item">
                               <label class="filter-price-field-item-title">от</label>
                               <input class="form-item form-item--text filter-price-field filter-price-field--from" type="text" value="1000">
+                              <div class="ml-10px">РУБ.</div>
                             </div>
                             <div class="filter-price-field-item">
                               <label class="filter-price-field-item-title">до</label>
                               <input class="form-item form-item--text filter-price-field filter-price-field--to" type="text" value="1000000">
+                              <div class="ml-10px">РУБ.</div>
                             </div>
                           </div>
                           <input class="form-item form-item--range" type="range" data-value="1000,1000000" value="1000, 1000000" min="1000" max="1000000" step="1" multiple>
@@ -1155,12 +1145,12 @@
                       </div>
                     </div>
                   </div>
+                  <div class="mobile-filter-btns">
+                    <button class="btn btn--black btn--medium">ПОКАЗАТЬ РЕЗУЛЬТАТЫ (688)</button>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="basket-mobile-menu__footer mobile-filter-btns">
-            <button class="btn btn--black btn--medium w100 max-w100" type="submit">ПОКАЗАТЬ РЕЗУЛЬТАТЫ (688)</button>
           </div>
         </div>
       </form>
