fix close filter menu

--- a/dev/public/dashboard.html
+++ b/dev/public/dashboard.html
@@ -816,7 +816,7 @@
         </div>
       </form>
     </div>
-    <div class="mobile-filter-holder">
+    <div class="mobile-filter-holder" id="mobile-filter-menu">
       <form>
         <div class="basket-inner page-inner--w2">
           <div class="mobile-filter-close"></div>
@@ -829,7 +829,7 @@
                     <div class="basket__title-link-clean-basket mobile-filter-heading-reset">Очистить фильтр</div>
                   </div>
                   <div class="mobile-filter-items" style="height: calc(100vh - 185px); overflow-y: auto; overflow-x: hidden;">
-                    <div class="mobile-filter-item" style="margin:0;">
+                    <div class="mobile-filter-item m-0">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Сортировать (Цена по убыванию)</div>
                         <div class="mobile-filter-item-heading-toggler"></div>
@@ -1145,9 +1145,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="mobile-filter-btns">
-                    <button class="btn btn--black btn--medium">ПОКАЗАТЬ РЕЗУЛЬТАТЫ (688)</button>
-                  </div>
+                  <div class="mobile-filter-btns"><a class="btn btn--black btn--medium" href="brand.html">ПОКАЗАТЬ РЕЗУЛЬТАТЫ (688)</a></div>
                 </div>
               </div>
             </div>
