fix change filter menu items

--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -1391,7 +1391,7 @@
         </div>
       </form>
     </div>
-    <div class="mobile-filter-holder" id="mobile-filter-menu">
+    <div class="mobile-filter-holder">
       <form>
         <div class="basket-inner page-inner--w2">
           <div class="mobile-filter-close"></div>
@@ -1399,11 +1399,11 @@
             <div class="mobile-filter-scroll-holder">
               <div class="mobile-filter-scroll-inner">
                 <div class="mobile-filter">
-                  <div class="mobile-filter-heading p-0">
+                  <div class="mobile-filter-heading">
                     <div class="mobile-filter-heading-title">Фильтры(3)</div>
                     <div class="basket__title-link-clean-basket mobile-filter-heading-reset">Очистить фильтр</div>
                   </div>
-                  <div class="mobile-filter-items" style="height: calc(100vh - 185px); overflow-y: auto; overflow-x: hidden;">
+                  <div class="mobile-filter-items">
                     <div class="mobile-filter-item m-0">
                       <div class="mobile-filter-item-heading">
                         <div class="mobile-filter-item-heading-title">Сортировать (Цена по убыванию)</div>
