--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -1720,7 +1720,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="mobile-filter-btns"><a class="btn btn--black btn--medium" href="brand.html">ПОКАЗАТЬ РЕЗУЛЬТАТЫ (688)</a></div>
+                  <div class="mobile-filter-btns"><a class="btn btn--black btn--medium" href="search.html">ПОКАЗАТЬ РЕЗУЛЬТАТЫ (688)</a></div>
                 </div>
               </div>
             </div>
