same edits for card

--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -520,19 +520,40 @@
                     <div class="accordion-item-content">
                       <ul class="product__accordion-availability">
                         <li>
-                          <div class="product__availability"><span>Outlet Village Белая Дача </span><span>(1)</span></div>
+                          <div class="product__availability"><span>Vnukovo Premium Outlet</span><span>(1)</span></div>
                         </li>
                         <li>
-                          <div class="product__availability"><span>Vnukovo Premium Outlet </span><span>(1)</span></div>
+                          <div class="product__availability"><span>Малый Патриарший пер., Москва</span><span>(1)</span></div>
                         </li>
                         <li>
-                          <div class="product__availability"><span>Таганская, Москва </span><span>(1)</span></div>
+                          <div class="product__availability"><span>ОСНОВНОЙ СКЛАД</span><span>(1)</span></div>
                         </li>
                         <li>
-                          <div class="product__availability"><span>ТГ &quot;Модный Сезон&quot; Москва </span><span>(1)</span></div>
+                          <div class="product__availability"><span>Таганская, Москва</span><span>(1)</span></div>
                         </li>
                         <li>
-                          <div class="product__availability"><span>ТК &quot;Невский центр&quot; СПб </span><span>(2)</span></div>
+                          <div class="product__availability"><span>ТГ &quot;Модный Сезон&quot; Москва</span><span>(2)</span></div>
+                        </li>
+                        <li>
+                          <div class="product__availability"><span>ТК &quot;Невский центр&quot; СПб</span><span>(1)</span></div>
+                        </li>
+                        <li>
+                          <div class="product__availability"><span>ТРК &quot;Тандем&quot;, Казань</span><span>(1)</span></div>
+                        </li>
+                        <li>
+                          <div class="product__availability"><span>ТРЦ &quot;Афимолл Сити&quot; Москва</span><span>(1)</span></div>
+                        </li>
+                        <li>
+                          <div class="product__availability"><span>ТРЦ &quot;Ереван Плаза&quot; Москва</span><span>(1)</span></div>
+                        </li>
+                        <li>
+                          <div class="product__availability"><span>ТЦ &quot;Авиапарк&quot; Москва&quot; Москва</span><span>(2)</span></div>
+                        </li>
+                        <li>
+                          <div class="product__availability"><span>ТЦ &quot;Капитолий&quot; Москва</span><span>(2)</span></div>
+                        </li>
+                        <li>
+                          <div class="product__availability"><span>Хохрякова, Екатеринбург</span><span>(2)</span></div>
                         </li>
                       </ul>
                     </div>
