--- a/dev/public/shops.html
+++ b/dev/public/shops.html
@@ -614,7 +614,8 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>ffff
+        <div id="map"></div>
       </main>
       <footer class="page-footer" itemscope="" itemtype="http://schema.org/WPFooter">
         <div class="page-inner page-inner--w2">
